// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"सामग्री को स्किप करें"`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "52",
  },
  {
    "p": "hindi.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:c6z8lgd39q7t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-hindi]",
  },
  {
    "x4": "[hi]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20News%20हिंदी]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, हिंदी",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "आप बीबीसी पर क्यों भरोसा कर सकते हैं",
  "url": "https://www.bbc.com/hindi/institutional-50223932",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "इस्तेमाल की शर्तें",
  "url": "https://www.bbc.com/hindi/institutional-37342293",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "बीबीसी के बारे में",
  "url": "https://www.bbc.com/hindi/institutional-37343168",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "निजता की नीति",
  "url": "https://www.bbc.com/hindi/institutional-37342614",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "कुकीज़",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "बीबीसी से संपर्क",
  "url": "https://www.bbc.co.uk/hindi/send/u50853357",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "अन्य भाषाएँ",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/hindi"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"बीबीसी के लिए कलेक्टिव न्यूज़रूम की ओर से प्रकाशित"`;

exports[`Canonical Home Page Footer Paragraphs should match text 2`] = `"© 2025 BBC. बाहरी साइटों की सामग्री के लिए बीबीसी ज़िम्मेदार नहीं है. बाहरी साइटों का लिंक देने की हमारी नीति के बारे में पढ़ें."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `"BBC News, हिंदी"`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "मौजूदा पन्ना, होम पेज",
  "url": "/hindi",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "भारत",
  "url": "/hindi/topics/ckdxnkz7607t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "बिहार विधानसभा चुनाव",
  "url": "/hindi/topics/c98yre1dg81t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "विदेश",
  "url": "/hindi/topics/c9wpm0en87xt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "हेल्थ",
  "url": "/hindi/topics/cr50ykdx5wqt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 6`] = `
{
  "text": "मनोरंजन",
  "url": "/hindi/topics/c06gq3n0pp7t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 7`] = `
{
  "text": "करियर",
  "url": "/hindi/topics/c95y3gjndw8t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 8`] = `
{
  "text": "फ़ाइनेंस",
  "url": "/hindi/topics/c5qvpx5dq4qt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 9`] = `
{
  "text": "खेल",
  "url": "/hindi/topics/cwr9j8g1kj9t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 10`] = `
{
  "text": "विज्ञान-टेक्नॉलॉजी",
  "url": "/hindi/topics/c2lej0594knt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 11`] = `
{
  "text": "सोशल",
  "url": "/hindi/topics/c2e4q0z9qznt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 12`] = `
{
  "text": "वीडियो",
  "url": "/hindi/topics/cw9kv0kpxydt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 13`] = `
{
  "text": "पॉडकास्ट",
  "url": "/hindi/topics/cv22x3pmrvmt",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page Most Read has item with rank 1`] = `
{
  "text": "पाकिस्तान भारत के मिसाइल हमलों को क्यों नहीं रोक पाया?",
  "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 2`] = `
{
  "text": "लाहौर का एयर डिफ़ेंस सिस्टम तबाह करने का भारत का दावा, पाकिस्तान ने 25 भारतीय ड्रोन गिराने का दावा किया",
  "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 3`] = `
{
  "text": "भारत-पाकिस्तान के बीच बढ़े तनाव की दुनिया भर में चर्चा, क्या कह रहा है अंतरराष्ट्रीय मीडिया?",
  "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 4`] = `
{
  "text": "चीन क्यों नहीं चाहेगा कि भारत और पाकिस्तान के बीच युद्ध हो?",
  "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 5`] = `
{
  "text": "भारत का हवाई हमला: अमेरिका, इसराइल,  चीन, रूस और तुर्की  क्या बोले?",
  "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 6`] = `
{
  "text": "भारत ने बहावलपुर को निशाना क्यों बनाया?",
  "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
}
`;

exports[`Canonical Home Page Most Read has item with rank 7`] = `
{
  "text": "कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?",
  "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
}
`;

exports[`Canonical Home Page Most Read has item with rank 8`] = `
{
  "text": "पाकिस्तान क्या भारतीय हवाई हमले का जवाब देगा? चार बड़े सवाल",
  "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 9`] = `
{
  "text": "भारत का मिसाइल और एयर डिफ़ेंस सिस्टम पाकिस्तान की तुलना में कैसा है?",
  "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
}
`;

exports[`Canonical Home Page Most Read has item with rank 10`] = `
{
  "text": "भारत के 'ऑपरेशन सिंदूर' पर मीडिया को जानकारी देने वाली दो महिला अधिकारी कौन हैं?",
  "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
}
`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"कौन है द रेज़िस्टेंस फ़्रंट ग्रुप जिसका नाम पहलगाम हमले में आ रहा है?"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  alt="पहलगाम"
  class="bbc-139onq"
  loading="lazy"
  src="https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/8b52/live/6c11f130-2c01-11f0-8da1-ad2bbee6cda5.jpg.webp"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/hindi/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hindi/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://localhost:7080/hindi"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, हिंदी - होम पेज"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"hi"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News हिंदी",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "hi",
        "name": "Hindi",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/hindi",
        "@type": "WebPage",
        "name": "BBC News हिंदी",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
          "width": 1024,
        },
        "name": "BBC News हिंदी",
        "publishingPrinciples": "https://www.bbc.com/hindi/institutional-50223932",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png",
      "url": "http://localhost:7080/hindi",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/hindi/articles/c365nejek65o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/hindi/articles/c5yq871757po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/hindi/articles/cx2jgwp0je1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/hindi/live/c1memd40vk5t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/hindi/articles/cgjljw6xq4jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/hindi/articles/cz703jn7y2wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/hindi/articles/cddedl5vdq4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/hindi/articles/cly2ypjrkp2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/hindi/articles/c5ygyg8j794o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/hindi/articles/cj6860krekgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/hindi/articles/c3r8rzpz881o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/hindi/articles/c77n7zz1zg2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/hindi/articles/c0l0lk2r0r4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/hindi/articles/creqevwwrqeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/hindi/articles/c9343dq12z4o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/hindi/articles/cx2y278l8v0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/hindi/articles/cx2v2v8mldeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/hindi/articles/cy5r5wn2n7wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/hindi/articles/cy9vzq3pg0no",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/hindi/articles/cm2xp04glj3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/hindi/articles/ce8g5z7x85yo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/hindi/articles/cedyq5y6zg3o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/hindi/articles/cze1ee3w4xeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/hindi/articles/cgjl384z5z5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 26,
          "url": "https://www.bbc.com/hindi/articles/ce8gkn4dkg6o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 27,
          "url": "https://www.bbc.com/hindi/articles/c209rrnl5rqo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 28,
          "url": "https://www.bbc.com/hindi/articles/c8dgzvd2rvgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 29,
          "url": "https://www.bbc.com/hindi/articles/cx20vvrkprzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 30,
          "url": "https://www.bbc.com/hindi/articles/c628392j6zeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 31,
          "url": "https://www.bbc.com/hindi/articles/c2kvkx0y0d9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 32,
          "url": "https://www.bbc.com/hindi/articles/c9djd6d2e79o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 33,
          "url": "https://www.bbc.com/hindi/articles/c0jzjqx8w3jo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 34,
          "url": "https://www.bbc.com/hindi/articles/c8x8xrkx9x1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 35,
          "url": "https://www.bbc.com/hindi/articles/c2dedprnw75o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 36,
          "url": "https://www.bbc.com/hindi/articles/c89g9l0157wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 37,
          "url": "https://www.bbc.com/hindi/articles/cpdzw61lpxjo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 38,
          "url": "https://www.bbc.com/hindi/bbc_hindi_tv/tv_programmes/w13xttlw",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 39,
          "url": "https://www.bbc.com/programmes/p08s9wv2",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 40,
          "url": "https://www.bbc.com/hindi/podcasts/p05525mc",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 41,
          "url": "https://www.bbc.com/hindi/podcasts/p0552909",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 42,
          "url": "https://www.bbc.com/hindi/podcasts/p0kjf03y",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 43,
          "url": "https://www.bbc.com/hindi/podcasts/p09ds7zx",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 44,
          "url": "https://www.youtube.com/playlist?list=PLYxuvEJLss6A0bxcJJ5wKJASYN_veB0Wp",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 45,
          "url": "https://www.bbc.com/hindi/articles/ce9p7dy1qd1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 46,
          "url": "https://www.bbc.com/hindi/articles/c9djz01093po",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 47,
          "url": "https://www.bbc.com/hindi/articles/c93g38p51pzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 48,
          "url": "https://www.bbc.com/hindi/articles/cevdvjkl2jro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 49,
          "url": "https://www.bbc.com/hindi/articles/cgkgl6k4pxzo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 50,
          "url": "https://www.bbc.com/hindi/articles/c4grnx2kwrpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 51,
          "url": "https://www.bbc.com/hindi/articles/cgqvwgvenxno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 52,
          "url": "https://www.bbc.com/hindi/articles/cedy31d9192o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 53,
          "url": "https://www.bbc.com/hindi/articles/c33zg0lk31xo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 54,
          "url": "https://www.bbc.com/hindi/articles/c62xy96wy0eo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 55,
          "url": "https://www.bbc.com/hindi/articles/c9qwrjp8zpgo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 56,
          "url": "https://www.bbc.com/hindi/articles/cpq73gnr8r1o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 57,
          "url": "https://www.bbc.com/hindi/articles/czrvz25yx4ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 58,
          "url": "https://www.bbc.com/hindi/articles/ce8grxyd18ro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 59,
          "url": "https://www.bbc.com/hindi/articles/ckgevrd222ko",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 60,
          "url": "https://www.bbc.com/hindi/articles/cy5r0dg461zo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 61,
          "url": "https://bit.ly/4gA4bwJ",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 62,
          "url": "https://www.facebook.com/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 63,
          "url": "https://x.com/BBCHindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 64,
          "url": "https://www.youtube.com/user/bbchindi",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 65,
          "url": "https://www.instagram.com/bbchindi/",
        },
      ],
      "name": "BBC News हिंदी",
      "numberOfItems": 65,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"hi-IN"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://localhost:7080/hindi"`;

exports[`Canonical Home Page SEO Page title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `"हिंदी में ताज़ा समाचार, ब्रेकिंग न्यूज़, वीडियो, ऑडियो और फ़ीचर. बीबीसी हिंदी डॉटकॉम पर भारत, पाकिस्तान और चीन सहित दुनिया भर की ताज़ा ख़बरें. BBC HINDI for up-to-the-minute news, breaking news, video, audio and feature stories."`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News हिंदी"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/hindi.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@bbchindi"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"ब्रेकिंग न्यूज़ समाचार, ताजा खबर | News, latest news, breaking news - BBC News हिंदी"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2025-05-08",
  "text": "8 मई 2025",
}
`;

exports[`Canonical Home Page messageBanner has a link 1`] = `"https://whatsapp.com/channel/0029Vaf8zY1ElagsEvZ4Gp1I"`;

exports[`Canonical Home Page messageBanner has an image 1`] = `
<img
  alt=""
  class="bbc-139onq"
  loading="eager"
  sizes="(max-width: 37.4375rem) 184px, 224px"
  src="https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/184/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 184w, 
                          https://ichef.bbci.co.uk/ace/ws/368/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 368w, 
                          https://ichef.bbci.co.uk/ace/ws/224/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 224w, 
                          https://ichef.bbci.co.uk/ace/ws/448/cpsprodpb/3bc3/live/e712bd90-225e-11ef-80aa-699d54c46324.png.webp 448w"
  style="aspect-ratio:16 / 9"
/>
`;
